--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://SumanDhungana10.github.io/calculator",
+  "homepage": "https://sumandhungana10.github.io/Calculator",
   "name": "calculator",
   "private": true,
   "version": "0.0.0",
